# server/v1/routes/session.js
@@ -3,6 +3,9 @@ const loginController = require("../controllers/session");
 
 const app = express();
 
+const authorization = require("../middlewares/authorization");
+
 app.post("/login", loginController.login);
+app.post("/verify", authorization, loginController.verify);
 
 module.exports = app;
